--- a/src/app/admin/api-key/api-key-list/api-key-table/api-key-table.component.html
+++ b/src/app/admin/api-key/api-key-list/api-key-table/api-key-table.component.html
@@ -1,28 +1,28 @@
 <div class="mat-elevation-z8">
-  <div class="loading-shade" *ngIf="isLoadingResults">
+  <div *ngIf="isLoadingResults" class="loading-shade">
     <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
   </div>
-  <table mat-table [dataSource]="data" matSort matSortActive="name" matSortDirection="asc" matSortDisableClear>
+  <table [dataSource]="data" mat-table matSort matSortActive="name" matSortDirection="asc" matSortDisableClear>
     <!-- Name Column -->
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+      <th *matHeaderCellDef mat-header-cell mat-sort-header>
         {{ "API-KEY.NAME" | translate }}
       </th>
-      <td mat-cell *matCellDef="let element">
+      <td *matCellDef="let element" mat-cell>
         {{ element.name }}
       </td>
     </ng-container>
 
     <!-- User Groups Column -->
     <ng-container matColumnDef="permissions">
-      <th mat-header-cell *matHeaderCellDef>
+      <th *matHeaderCellDef mat-header-cell>
         {{ "API-KEY.PERMISSIONS" | translate }}
       </th>
-      <td mat-cell *matCellDef="let element">
+      <td *matCellDef="let element" mat-cell>
         <ng-container *ngIf="element.permissions; else noUsers">
           <ng-container *ngFor="let pm of element.permissions">
             <span>{{ pm.name }}</span>
-            <br />
+            <br/>
           </ng-container>
         </ng-container>
         <ng-template #noUsers>{{ "NoUsersAdded" | translate }}</ng-template>
@@ -31,32 +31,53 @@
 
     <!-- Key Column -->
     <ng-container matColumnDef="key">
-      <th mat-header-cell *matHeaderCellDef>
+      <th *matHeaderCellDef mat-header-cell>
         {{ "API-KEY.KEY" | translate }}
       </th>
-      <td mat-cell *matCellDef="let element">
+      <td *matCellDef="let element" mat-cell>
         {{ element.key }}
       </td>
     </ng-container>
 
+    <!--  Expiration Column  -->
+    <ng-container matColumnDef="expiresOn">
+      <th *matHeaderCellDef mat-header-cell mat-sort-header>
+        {{ "API-KEY.EXPIRES-ON" | translate }}
+      </th>
+      <td *matCellDef="let element" mat-cell>
+        {{ (element.expiresOn | dateOnly) ?? '-' }}
+      </td>
+    </ng-container>
+
+    <!--  Status Column  -->
+    <ng-container matColumnDef="status">
+      <th *matHeaderCellDef mat-header-cell>
+        {{ "API-KEY.STATUS" | translate }}
+      </th>
+      <td *matCellDef="let element" mat-cell>
+        <p [ngClass]="!isKeyExpired(element) | activeDeactive">{{ !isKeyExpired(element) | activeDeactive }}</p>
+      </td>
+    </ng-container>
+
+
     <!-- Menu Column -->
     <ng-container matColumnDef="menu">
-      <th mat-header-cell *matHeaderCellDef></th>
-      <td mat-cell *matCellDef="let element">
+      <th *matHeaderCellDef mat-header-cell></th>
+      <td *matCellDef="let element" mat-cell>
         <div *ngIf="canAccess(element)" class="dropdown">
           <a
-            href="#"
-            role="button"
-            id="tableRowDropdown-{{ element.id }}"
+            [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"
+            aria-expanded="false"
             class="applicationRow__edit dropdown-toggle"
             data-toggle="dropdown"
-            aria-expanded="false"
-            [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"
+            href="#"
+            id="tableRowDropdown-{{ element.id }}"
+            role="button"
           ></a>
-          <ul class="dropdown-menu dropdown-menu--table" attr.aria-labelledby="tableRowDropdown-{{ element.id }}">
+          <ul attr.aria-labelledby="tableRowDropdown-{{ element.id }}" class="dropdown-menu dropdown-menu--table">
             <li class="dropdown-item">
               <a [routerLink]="[element.id, 'edit-api-key']" routerLinkActive="active"
-                >{{ "ORGANISATION-TABLE-ROW.EDIT" | translate }}
+              >{{ "ORGANISATION-TABLE-ROW.EDIT" | translate }}
               </a>
             </li>
             <li class="dropdown-item">
@@ -67,13 +88,13 @@
       </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    <tr *matHeaderRowDef="displayedColumns" mat-header-row></tr>
+    <tr *matRowDef="let row; columns: displayedColumns" mat-row></tr>
   </table>
   <mat-paginator
+    [length]="resultsLength"
     [pageSizeOptions]="pageSizeOptions"
     [pageSize]="pageSize"
-    [length]="resultsLength"
     showFirstLastButtons
   >
   </mat-paginator>
