Changes from PR

--- a/src/app/admin/users/user-edit/user-edit.component.html
+++ b/src/app/admin/users/user-edit/user-edit.component.html
@@ -104,6 +104,7 @@
       <input
         [formControl]="serializedExpirationDate"
         [matDatepicker]="expirationDatePicker"
+        [min]="now"
         matInput
       />
       <mat-datepicker-toggle [for]="expirationDatePicker" matSuffix></mat-datepicker-toggle>
