--- a/src/app/navbar/administration/administration.component.html
+++ b/src/app/navbar/administration/administration.component.html
@@ -1,4 +1,6 @@
-@if(isGlobalAdmin){
+@if(isGlobalAdmin || isUserAdmin){
+
+<div class="nav-bar-title">{{ "NAV.TITLES.ADMINISTRATION" | translate }}</div>
 
 <ul class="navbar-nav flex-column">
   <li class="nav-item">
@@ -11,7 +13,7 @@
       {{ "NAV.PERMISSIONS" | translate }}
     </a>
   </li>
-  <li class="nav-item">
+  <li class="nav-item" *ngIf="isGlobalAdmin">
     <a routerLink="/admin/organisations" routerLinkActive="active">
       {{ "NAV.ORGANISATIONS" | translate }}
     </a>
