Update angular part 1

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,7 +36,7 @@
 @import "assets/scss/setup/variables";
 @import "assets/scss/setup/material-theme";
 
-@import "~leaflet/dist/leaflet.css";
+@import "leaflet/dist/leaflet.css";
 
 @import "./app/shared/styles/leaflet-styles.scss";
 
