--- a/src/assets/scss/setup/_material-theme.scss
+++ b/src/assets/scss/setup/_material-theme.scss
@@ -1,7 +1,8 @@
 @use "@angular/material" as mat;
 @import "variables";
 
-@include mat.core();
+@include mat.elevation-classes();
+@include mat.app-background();
 
 /* ======== angular material custom theme ======== */
 $OS2IoT-primary: mat.m2-define-palette(mat.$m2-orange-palette);
@@ -42,7 +43,8 @@ $OS2IoT-theme: mat.m2-define-dark-theme(
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
-@include mat.core();
+@include mat.elevation-classes();
+@include mat.app-background();
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
