--- a/src/app/applications/bulk-import/bulk-import.component.html
+++ b/src/app/applications/bulk-import/bulk-import.component.html
@@ -21,7 +21,7 @@
     </div>
   }
   <div class="col-12">
-    <div class="btn-group float-md-right dropdown">
+    <div class="btn-group float-md-end dropdown">
       <button
         aria-expanded="false"
         aria-haspopup="true"
