--- a/src/app/applications/datatarget/fiware/fiware-edit/fiware-edit.component.html
+++ b/src/app/applications/datatarget/fiware/fiware-edit/fiware-edit.component.html
@@ -268,7 +268,7 @@
       <button (click)="routeToDatatargets()" class="btn btn-light" type="button">
         {{ "GEN.BACK" | translate }}
       </button>
-      <button [disabled]="disableSaveButton()" class="btn btn-primary ml-2" type="submit">
+      <button [disabled]="disableSaveButton()" class="btn btn-primary ms-2" type="submit">
         {{ submitButton }}
       </button>
     </div>
