--- a/src/app/applications/datatarget/httppush/httppush-edit/httppush-edit.component.html
+++ b/src/app/applications/datatarget/httppush/httppush-edit/httppush-edit.component.html
@@ -158,6 +158,6 @@
 }
   <div class="form-group mt-5">
     <button (click)="routeToDatatargets()" class="btn btn-light" type="button">{{ "GEN.BACK" | translate }}</button>
-    <button class="btn btn-primary ml-2" type="submit">{{ submitButton }}</button>
+    <button class="btn btn-primary ms-2" type="submit">{{ submitButton }}</button>
   </div>
 </form>
