--- a/src/app/applications/datatarget/opendatadk/opendatadk-edit/opendatadk-edit.component.html
+++ b/src/app/applications/datatarget/opendatadk/opendatadk-edit/opendatadk-edit.component.html
@@ -360,7 +360,7 @@
     <button (click)="routeToDatatargets()" class="btn btn-light" type="button">
       {{ "GEN.BACK" | translate }}
     </button>
-    <button [disabled]="!datatarget?.openDataDkDataset?.acceptTerms" class="btn btn-primary ml-2" type="submit">
+    <button [disabled]="!datatarget?.openDataDkDataset?.acceptTerms" class="btn btn-primary ms-2" type="submit">
       {{ "DATATARGET.SAVE" | translate }}
     </button>
   </div>
