--- a/src/app/applications/datatarget/opendatadk/opendatadk-edit/opendatadk-mail-dialog/opendatadk-mail-dialog.html
+++ b/src/app/applications/datatarget/opendatadk/opendatadk-edit/opendatadk-mail-dialog/opendatadk-mail-dialog.html
@@ -37,9 +37,9 @@
     </div>
   </div>
 </div>
-<div class="d-flex flex-row-reverse p-4 pr-2" mat-dialog-actions>
-  <button (click)="send()" class="btn btn-primary ml-2 pl-2 pr-2">
+<div class="d-flex flex-row-reverse p-4 pe-2" mat-dialog-actions>
+  <button (click)="send()" class="btn btn-primary ms-2 ps-2 pe-2">
     {{ 'OPENDATADK.MAIL.DIALOG_CONFIRM' | translate }}
   </button>
-  <button class="btn btn-secondary pl-2 pr-2" mat-dialog-close>{{ 'DIALOG.CLOSE' | translate }}</button>
+  <button class="btn btn-secondary ps-2 pe-2" mat-dialog-close>{{ 'DIALOG.CLOSE' | translate }}</button>
 </div>
