--- a/src/app/applications/iot-devices/iot-device-change-application-dialog/iot-device-change-application-dialog.component.html
+++ b/src/app/applications/iot-devices/iot-device-change-application-dialog/iot-device-change-application-dialog.component.html
@@ -118,7 +118,7 @@
     <button (click)="onSubmit()" class="btn btn-primary">
       {{ "GEN.SAVE" | translate }}
     </button>
-    <button [mat-dialog-close]="false" class="btn btn-secondary ml-2" mat-dialog-close>
+    <button [mat-dialog-close]="false" class="btn btn-secondary ms-2" mat-dialog-close>
       {{ "GEN.CANCEL" | translate }}
     </button>
   </div>
