--- a/src/app/applications/iot-devices/iot-devices-tab/export-csv-dialog/export-csv-dialog.component.html
+++ b/src/app/applications/iot-devices/iot-devices-tab/export-csv-dialog/export-csv-dialog.component.html
@@ -6,7 +6,7 @@
   <button [mat-dialog-close]="true" class="btn btn-primary" mat-dialog-close>
     {{ "DIALOG.OK" | translate }}
   </button>
-  <button [mat-dialog-close]="false" class="btn btn-secondary ml-2" mat-dialog-close>
+  <button [mat-dialog-close]="false" class="btn btn-secondary ms-2" mat-dialog-close>
     {{ "DIALOG.CLOSE" | translate }}
   </button>
 </div>
