--- a/src/app/gateway/gateway-detail/gateway-detail.component.html
+++ b/src/app/gateway/gateway-detail/gateway-detail.component.html
@@ -146,8 +146,8 @@
           <div class="col-md-6 d-flex align-items-stretch mt-1 mb-4">
             <app-graph
               [data]="receivedGraphData"
-              [graphCardClass]="'shadow-none pl-0'"
-              [graphHeaderClass]="'mat-card-header-text-ml-0'"
+              [graphCardClass]="'shadow-none ps-0'"
+              [graphHeaderClass]="'mat-card-header-text-ms-0'"
               [title]="'GATEWAY.STATS-RXPACKETSRECEIVED' | translate"
               [type]="'line'"
             >
@@ -156,8 +156,8 @@
           <div class="col-md-6 d-flex align-items-stretch mt-1 mb-4">
             <app-graph
               [data]="sentGraphData"
-              [graphCardClass]="'shadow-none pl-0'"
-              [graphHeaderClass]="'mat-card-header-text-ml-0'"
+              [graphCardClass]="'shadow-none ps-0'"
+              [graphHeaderClass]="'mat-card-header-text-ms-0'"
               [title]="'GATEWAY.STATS-TXPACKETSEMITTED' | translate"
               [type]="'line'"
             >
