--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse flex-grow-0" id="navbar-login">
       <ul class="navbar-nav flex-column">
         <li class="nav-item">
-          <a [routerLinkActive]="['active']" class="nav-link pl-5 position-relative rounded" id="auth"
+          <a [routerLinkActive]="['active']" class="nav-link ps-5 position-relative rounded" id="auth"
              routerLink="/auth">
             {{ "NAV.LOGIN" | translate }}
           </a>
