--- a/src/app/navbar/organisation-dropdown/sigfox-dropdown/sigfox-dropdown.component.html
+++ b/src/app/navbar/organisation-dropdown/sigfox-dropdown/sigfox-dropdown.component.html
@@ -7,14 +7,14 @@
         </mat-icon>
       </mat-panel-title>
       <mat-panel-description>
-        <p class="nav-link ml-2">{{ "NAV.SIGFOX" | translate }}</p>
+        <p class="nav-link ms-2">{{ "NAV.SIGFOX" | translate }}</p>
       </mat-panel-description>
     </mat-panel-title>
     <mat-panel-description></mat-panel-description>
   </mat-expansion-panel-header>
   <ul class="navbar-nav flex-column">
     <li class="nav-item">
-      <a class="nav-link pl-5 position-relative rounded" routerLink="/sigfox/sigfox-groups" routerLinkActive="active">
+      <a class="nav-link ps-5 position-relative rounded" routerLink="/sigfox/sigfox-groups" routerLinkActive="active">
         {{ "NAV.SIGFOX-ADMIN" | translate }}
       </a>
       <fa-icon [icon]="faToolbox" class="navbar-icon"></fa-icon>
