--- a/src/app/shared/components/top-bar-table/top-bar-table.component.html
+++ b/src/app/shared/components/top-bar-table/top-bar-table.component.html
@@ -3,7 +3,7 @@
     @if (title) {
       <h3 class="mb-0">{{ title }}</h3>
     }
-    <div class="ml-auto d-flex">
+    <div class="ms-auto d-flex">
       <div>
         @if (ctaActionButtonOnClick) {
           <button
