--- a/src/app/shared/components/welcome-dialog/welcome-dialog.component.html
+++ b/src/app/shared/components/welcome-dialog/welcome-dialog.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-end">
-  <p (click)="close()" class="close-symbol text-right">X</p>
+  <p (click)="close()" class="close-symbol text-end">X</p>
 </div>
 <div class="container">
   <header class="text-center header" mat-dialog-title>
