--- a/src/app/sigfox/sigfox-groups-detail/sigfox-device-types-edit/sigfox-device-types-edit.component.html
+++ b/src/app/sigfox/sigfox-groups-detail/sigfox-device-types-edit/sigfox-device-types-edit.component.html
@@ -98,7 +98,7 @@
     <button (click)="routeBack()" class="btn btn-secondary" type="button">
       {{ "ORGANISATION.FORM.CANCEL" | translate }}
     </button>
-    <button [disabled]="!canEdit" class="btn btn-primary ml-2" type="submit">
+    <button [disabled]="!canEdit" class="btn btn-primary ms-2" type="submit">
       {{ "SIGFOX-GROUP.PROFILES.SAVE" | translate }}
     </button>
   </div>
