--- a/src/app/admin/api-key/api-key-edit/api-key-edit.component.html
+++ b/src/app/admin/api-key/api-key-edit/api-key-edit.component.html
@@ -73,7 +73,7 @@
     <button (click)="routeBack()" class="btn btn-secondary" type="button">
       {{ "GEN.CANCEL" | translate }}
     </button>
-    <button class="btn btn-primary ml-2" type="submit">
+    <button class="btn btn-primary ms-2" type="submit">
       {{ "GEN.SAVE" | translate }}
     </button>
   </div>
