--- a/src/app/admin/organisation/organisation-edit/organisation-edit.component.html
+++ b/src/app/admin/organisation/organisation-edit/organisation-edit.component.html
@@ -31,6 +31,6 @@
     <button (click)="routeBack()" class="btn btn-secondary" type="button">
       {{ "ORGANISATION.FORM.CANCEL" | translate }}
     </button>
-    <button class="btn btn-primary ml-2" type="submit">{{ "ORGANISATION.FORM.SAVE" | translate }}</button>
+    <button class="btn btn-primary ms-2" type="submit">{{ "ORGANISATION.FORM.SAVE" | translate }}</button>
   </div>
 </form>
