--- a/src/app/admin/users/accept-user/accept-user.component.html
+++ b/src/app/admin/users/accept-user/accept-user.component.html
@@ -54,7 +54,7 @@
                 <button (click)="routeBack()" class="btn btn-secondary" type="button">
                   {{ "GEN.CANCEL" | translate }}
                 </button>
-                <button class="btn btn-primary ml-2" type="submit">
+                <button class="btn btn-primary ms-2" type="submit">
                   {{ "USERS.ACCEPT-USER.ACCEPT" | translate }}
                 </button>
               </div>
