--- a/src/app/admin/users/user-edit/user-edit.component.html
+++ b/src/app/admin/users/user-edit/user-edit.component.html
@@ -139,7 +139,7 @@
       <button (click)="routeBack()" class="btn btn-secondary" type="button">
         {{ "GEN.CANCEL" | translate }}
       </button>
-      <button class="btn btn-primary ml-2" type="submit">{{ "USERS.FORM.SAVE" | translate }}</button>
+      <button class="btn btn-primary ms-2" type="submit">{{ "USERS.FORM.SAVE" | translate }}</button>
     </div>
   </div>
 </form>
