--- a/src/app/applications/datatarget/mqtt/mqtt-edit/mqtt-edit.component.html
+++ b/src/app/applications/datatarget/mqtt/mqtt-edit/mqtt-edit.component.html
@@ -265,6 +265,6 @@
 
   <div class="form-group mt-5">
     <button (click)="routeToDatatargets()" class="btn btn-light" type="button">{{ "GEN.BACK" | translate }}</button>
-    <button class="btn btn-primary ml-2" type="submit">{{ "DATATARGET.SAVE" | translate }}</button>
+    <button class="btn btn-primary ms-2" type="submit">{{ "DATATARGET.SAVE" | translate }}</button>
   </div>
 </form>
