--- a/src/app/applications/datatarget/opendatadk/opendatadk-edit/opendatadk-warning-dialog/opendatadk-warning-dialog.html
+++ b/src/app/applications/datatarget/opendatadk/opendatadk-edit/opendatadk-warning-dialog/opendatadk-warning-dialog.html
@@ -11,7 +11,7 @@
     </div>
   </div>
 </div>
-<div class="d-flex flex-row-reverse p-4 pr-2 pt-2" mat-dialog-actions>
-  <button (click)="ok()" class="btn btn-primary ml-2 pl-4 pr-4">{{ 'DIALOG.OK' | translate }}</button>
-  <button class="btn btn-secondary pl-2 pr-2" mat-dialog-close>{{ 'DIALOG.CLOSE' | translate }}</button>
+<div class="d-flex flex-row-reverse p-4 pe-2 pt-2" mat-dialog-actions>
+  <button (click)="ok()" class="btn btn-primary ms-2 ps-4 pe-4">{{ 'DIALOG.OK' | translate }}</button>
+  <button class="btn btn-secondary ps-2 pe-2" mat-dialog-close>{{ 'DIALOG.CLOSE' | translate }}</button>
 </div>
