--- a/src/app/applications/iot-devices/iot-device-detail/downlink/downlink-dialog/downlink-dialog.component.html
+++ b/src/app/applications/iot-devices/iot-device-detail/downlink/downlink-dialog/downlink-dialog.component.html
@@ -3,10 +3,10 @@
   {{ "IOTDEVICE.DOWNLINK.DIALOG-MESSAGE" | translate }}
 </div>
 <div mat-dialog-actions>
-  <button class="btn btn-primary ml-2" click="cancel()" mat-button mat-dialog-close>
+  <button class="btn btn-primary ms-2" click="cancel()" mat-button mat-dialog-close>
     {{ "IOTDEVICE.DOWNLINK.DIALOG-DECLINE" | translate }}
   </button>
-  <button [mat-dialog-close]="true" class="btn btn-secondary ml-2" mat-button mat-dialog-close>
+  <button [mat-dialog-close]="true" class="btn btn-secondary ms-2" mat-button mat-dialog-close>
     {{ "IOTDEVICE.DOWNLINK.DIALOG-CONFIRM" | translate }}
   </button>
 </div>
