--- a/src/app/device-model/device-model-edit/device-model-edit.component.html
+++ b/src/app/device-model/device-model-edit/device-model-edit.component.html
@@ -255,6 +255,6 @@
   </div>
   <div class="form-group mt-5">
     <button (click)="routeBack()" class="btn btn-secondary" type="button">{{ "GEN.CANCEL" | translate }}</button>
-    <button class="btn btn-primary ml-2" type="submit">{{ "GEN.SAVE" | translate }}</button>
+    <button class="btn btn-primary ms-2" type="submit">{{ "GEN.SAVE" | translate }}</button>
   </div>
 </form>
