--- a/src/app/profiles/device-profiles/device-profiles-edit/device-profiles-edit.component.html
+++ b/src/app/profiles/device-profiles/device-profiles-edit/device-profiles-edit.component.html
@@ -358,11 +358,11 @@
   </mat-tab-group>
   <div class="row mt-5">
     <div class="col-xs-12">
-      <div class="float-right">
+      <div class="float-end">
         <button (click)="routeBack()" class="btn btn-secondary" type="button">
           {{ "GEN.CANCEL" | translate }}
         </button>
-        <button [disabled]="!deviceProfile.canEdit" class="btn btn-primary ml-3" type="submit">
+        <button [disabled]="!deviceProfile.canEdit" class="btn btn-primary ms-3" type="submit">
           {{ "GEN.SAVE" | translate }}
         </button>
       </div>
