--- a/src/app/shared/components/delete-dialog/delete-dialog.component.html
+++ b/src/app/shared/components/delete-dialog/delete-dialog.component.html
@@ -8,21 +8,21 @@
 </div>
 <div class="d-flex flex-row-reverse" mat-dialog-actions>
   @if (dialogModel.showCancel) {
-    <button class="btn btn-primary ml-2" click="close()" mat-dialog-close>
+    <button class="btn btn-primary ms-2" click="close()" mat-dialog-close>
       {{ dialogModel.cancelText || "DIALOG.CLOSE" | translate }}
     </button>
   } @if (dialogModel.showAccept) {
-  <button [mat-dialog-close]="true" class="btn btn-secondary ml-2" mat-dialog-close>
+  <button [mat-dialog-close]="true" class="btn btn-secondary ms-2" mat-dialog-close>
     {{ dialogModel.acceptText || "DIALOG.DIALOG-CONFIRM" | translate }}
   </button>
 } @if (dialogModel.showOk) {
-  <button class="btn btn-primary ml-2" click="close()" mat-dialog-close>
+  <button class="btn btn-primary ms-2" click="close()" mat-dialog-close>
     {{ "DIALOG.OK" | translate }}
   </button>
 } @if (dialogModel.showReject) {
   <button
     [mat-dialog-close]="true"
-    class="btn btn-secondary ml-2"
+    class="btn btn-secondary ms-2"
     click="close()"
     mat-dialog-close
   >
