--- a/src/app/shared/components/forms/form-body-application/form-body-application.component.html
+++ b/src/app/shared/components/forms/form-body-application/form-body-application.component.html
@@ -315,6 +315,6 @@
 
   <div class="form-group mt-5">
     <button (click)="routeBack()" class="btn btn-secondary" type="button">{{ "GEN.CANCEL" | translate }}</button>
-    <button class="btn btn-primary ml-2" type="submit">{{ submitButton }}</button>
+    <button class="btn btn-primary ms-2" type="submit">{{ submitButton }}</button>
   </div>
 </form>
