--- a/src/assets/scss/components/_topbar.scss
+++ b/src/assets/scss/components/_topbar.scss
@@ -48,7 +48,7 @@
           }
 
           .search-icon {
-            @extend .ml-2;
+            @extend .ms-2;
             display: flex;
             flex-direction: column;
             justify-content: center;
