--- a/src/app/shared/components/top-bar/top-bar.component.html
+++ b/src/app/shared/components/top-bar/top-bar.component.html
@@ -16,10 +16,10 @@
         />
       </div>
     } @else {
-    <mat-form-field class="search-form--full-width invisible">
-      <input matInput/>
-    </mat-form-field>
-  }
+      <mat-form-field class="search-form--full-width invisible">
+        <input matInput/>
+      </mat-form-field>
+    }
   </form>
 
   <button [matMenuTriggerFor]="menu" class="profile-button" id="userDropdown">
@@ -60,24 +60,26 @@
     @if (backButtonTitle) {
       <fa-icon [icon]="faChevronLeft" class="icon--primary mb-1"></fa-icon>
       <a (click)="routeTo()" [routerLink]="[]" class="back-button">{{ backButtonTitle }}</a>
-    } @if (data || subPage === true) {
-    <fa-icon [icon]="faChevronLeft" class="icon--primary mb-1"></fa-icon>
-    <a (click)="routeTo()" [routerLink]="[]" class="back-button">{{ backButton.label }}</a>
-    <h3 class="ps-md-3">{{ subTitle || staticTitle }}</h3>
-  } @if (title) {
-    <div class="page-title">{{ title || staticTitle }}</div>
-  }
+    }
+    @if (data || subPage === true) {
+      <fa-icon [icon]="faChevronLeft" class="icon--primary mb-1"></fa-icon>
+      <a (click)="routeTo()" [routerLink]="[]" class="back-button">{{ backButton.label }}</a>
+      <h3 class="ps-md-3">{{ subTitle || staticTitle }}</h3>
+    }
+    @if (title) {
+      <div class="page-title">{{ title || staticTitle }}</div>
+    }
   </nav>
 
   <!-- action buttons start -->
 
   @if (dropDownButton && addDetailDowndown === true && canEdit) {
-    <div>
+    <div class="dropdown">
       <button
         aria-expanded="false"
         aria-haspopup="true"
         class="btn btn-primary dropdown-toggle"
-        data-toggle="dropdown"
+        data-bs-toggle="dropdown"
         id="dropdown-{{ data?.name }}"
         type="button"
       >
@@ -93,11 +95,12 @@
               <a (click)="onClickExtraDropdownOption(option.id)">{{ option.label }}</a>
             </li>
           }
-        } @if (dropDownButton.isErasable === true) {
-        <li class="dropdown-item">
-          <a (click)="onClickDelete()">{{ "TOPBAR.DROPDOWN.DELETE" | translate }} </a>
-        </li>
-      }
+        }
+        @if (dropDownButton.isErasable === true) {
+          <li class="dropdown-item">
+            <a (click)="onClickDelete()">{{ "TOPBAR.DROPDOWN.DELETE" | translate }} </a>
+          </li>
+        }
       </ul>
     </div>
   }
