--- a/src/assets/scss/components/_tables.scss
+++ b/src/assets/scss/components/_tables.scss
@@ -50,7 +50,7 @@ table {
 
   .dropdown-menu {
     &--table {
-      min-width: 90px !important;
+      min-width: fit-content !important;
       left: -35px !important;
     }
 
@@ -70,7 +70,7 @@ table {
 
         &:hover,
         &:active {
-          color: $black;
+          color: white;
           text-decoration: none;
           background-color: $color-primary;
         }
